--- a/index.html
+++ b/index.html
@@ -112,7 +112,137 @@
                             Скачать
                         </button>
                     </a>
-                    
+                    <div class="document-size">
+                        7.13 МБ
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="documents-item">
+            <div class="document-item-image">
+                <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
+                    <div class="document-preview">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                    </div>
+                    <div class="document-zoom">
+                        <img src="../../img/Zoom-in.svg" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="document-item-info">
+                <div class="document-title">
+                    Технический паспорт ADHESOL ES 150 S
+                </div>
+                <div class="document-hashtag">
+                    <a href="#">#однокомпонентный</a>
+                </div>
+                <div class="document-download">
+                    <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
+                        <button class="document-download-btn">
+                            <img src="../../img/download-icon.svg" alt="">
+                            Скачать
+                        </button>
+                    </a>
+                    <div class="document-size">
+                        7.13 МБ
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="documents-item">
+            <div class="document-item-image">
+                <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
+                    <div class="document-preview">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                    </div>
+                    <div class="document-zoom">
+                        <img src="../../img/Zoom-in.svg" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="document-item-info">
+                <div class="document-title">
+                    Технический паспорт ADHESOL ES 150 S
+                </div>
+                <div class="document-hashtag">
+                    <a href="#">#однокомпонентный</a>
+                </div>
+                <div class="document-download">
+                    <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
+                        <button class="document-download-btn">
+                            <img src="../../img/download-icon.svg" alt="">
+                            Скачать
+                        </button>
+                    </a>
+                    <div class="document-size">
+                        7.13 МБ
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="documents-item">
+            <div class="document-item-image">
+                <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
+                    <div class="document-preview">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                    </div>
+                    <div class="document-zoom">
+                        <img src="../../img/Zoom-in.svg" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="document-item-info">
+                <div class="document-title">
+                    Технический паспорт ADHESOL ES 150 S
+                </div>
+                <div class="document-hashtag">
+                    <a href="#">#однокомпонентный</a>
+                </div>
+                <div class="document-download">
+                    <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
+                        <button class="document-download-btn">
+                            <img src="../../img/download-icon.svg" alt="">
+                            Скачать
+                        </button>
+                    </a>
+                    <div class="document-size">
+                        7.13 МБ
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="documents-item">
+            <div class="document-item-image">
+                <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
+                    <div class="document-preview">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                    </div>
+                    <div class="document-zoom">
+                        <img src="../../img/Zoom-in.svg" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="document-item-info">
+                <div class="document-title">
+                    Технический паспорт ADHESOL ES 150 S
+                </div>
+                <div class="document-hashtag">
+                    <a href="#">#однокомпонентный</a>
+                </div>
+                <div class="document-download">
+                    <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
+                        <button class="document-download-btn">
+                            <img src="../../img/download-icon.svg" alt="">
+                            Скачать
+                        </button>
+                    </a>
+                    <div class="document-size">
+                        7.13 МБ
+                    </div>
                 </div>
             </div>
         </div>
