--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <div class="document-item-image">
                 <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
                     <div class="document-preview">
-                        <img src="./img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
                     </div>
                     <div class="document-zoom">
-                        <img src="./img/Zoom-in.svg" alt="">
+                        <img src="../../img/Zoom-in.svg" alt="">
                     </div>
                 </a>
             </div>
@@ -108,7 +108,7 @@
                 <div class="document-download">
                     <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
                         <button class="document-download-btn">
-                            <img src="./img/download-icon.svg" alt="">
+                            <img src="../../img/download-icon.svg" alt="">
                             Скачать
                         </button>
                     </a>
@@ -123,10 +123,10 @@
             <div class="document-item-image">
                 <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
                     <div class="document-preview">
-                        <img src="./img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
                     </div>
                     <div class="document-zoom">
-                        <img src="./img/Zoom-in.svg" alt="">
+                        <img src="../../img/Zoom-in.svg" alt="">
                     </div>
                 </a>
             </div>
@@ -140,7 +140,7 @@
                 <div class="document-download">
                     <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
                         <button class="document-download-btn">
-                            <img src="./img/download-icon.svg" alt="">
+                            <img src="../../img/download-icon.svg" alt="">
                             Скачать
                         </button>
                     </a>
@@ -155,10 +155,10 @@
             <div class="document-item-image">
                 <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
                     <div class="document-preview">
-                        <img src="./img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
                     </div>
                     <div class="document-zoom">
-                        <img src="./img/Zoom-in.svg" alt="">
+                        <img src="../../img/Zoom-in.svg" alt="">
                     </div>
                 </a>
             </div>
@@ -172,7 +172,7 @@
                 <div class="document-download">
                     <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
                         <button class="document-download-btn">
-                            <img src="./img/download-icon.svg" alt="">
+                            <img src="../../img/download-icon.svg" alt="">
                             Скачать
                         </button>
                     </a>
@@ -187,10 +187,10 @@
             <div class="document-item-image">
                 <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
                     <div class="document-preview">
-                        <img src="./img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
                     </div>
                     <div class="document-zoom">
-                        <img src="./img/Zoom-in.svg" alt="">
+                        <img src="../../img/Zoom-in.svg" alt="">
                     </div>
                 </a>
             </div>
@@ -204,7 +204,7 @@
                 <div class="document-download">
                     <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
                         <button class="document-download-btn">
-                            <img src="./img/download-icon.svg" alt="">
+                            <img src="../../img/download-icon.svg" alt="">
                             Скачать
                         </button>
                     </a>
@@ -219,10 +219,10 @@
             <div class="document-item-image">
                 <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" target="_blank">
                     <div class="document-preview">
-                        <img src="./img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
+                        <img src="../../img/tekhnicheskij_pasport_Adhesol_ES_150_S-1.webp" alt="">
                     </div>
                     <div class="document-zoom">
-                        <img src="./img/Zoom-in.svg" alt="">
+                        <img src="../../img/Zoom-in.svg" alt="">
                     </div>
                 </a>
             </div>
@@ -236,7 +236,7 @@
                 <div class="document-download">
                     <a href="https://adhesol.ru/upload/iblock/8c1/jtzfbd5bu55p12aiw8aznk6xzj43i86t/tekhnicheskij_pasport_Adhesol_ES_150_S.pdf" download target="_blank">
                         <button class="document-download-btn">
-                            <img src="./img/download-icon.svg" alt="">
+                            <img src="../../img/download-icon.svg" alt="">
                             Скачать
                         </button>
                     </a>
