--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 
 <body>
-	<section class="section-semi-width documents">
-
+	<section class="section-semi-width">
     <div class="document-hashtags-block">
         <div class="document-hashtag-item">
             <a href="#">
@@ -85,7 +84,8 @@
             </a>
         </div>
     </div>
-
+</section>
+	<section class="section-semi-width documents">
     <div class="documents-inner">
         <div class="documents-item">
             <div class="document-item-image">
